# gglang

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: decisions.md  geometries.md  interaction.md  language.md
examples/: README.md  bar.gg  bar_count_fill.gg  bar_data.csv  bar_dodge.gg  bar_dodge_count.gg  bar_stacked.gg  categorical.csv  categorical.gg  demo.ggtheme  discrete_year.csv  discrete_year.gg  geom_text.gg  histogram.csv  histogram.gg  histogram_dodge.gg  histogram_fill.gg  iris-mock.csv  log_scale.csv  log_scale.gg  pie.csv  pie.gg  polar_scatter.gg  radar.csv  radar.gg  scatter.csv  scatter.gg  scatter_alpha.gg  scatter_alpha_constant.gg  scatter_color.gg  scatter_color_continuous.csv  scatter_color_continuous.gg  scatter_custom_labels.gg  scatter_shape.gg  state_population.csv  stocks.csv  theme_file.gg  theme_overrides.gg  timeseries.gg  timeseries_facet.gg
examples/composition/: README.md  demo-theme.xml  sales.xml
examples/custom_language/: histogram.txt  multi-layered.txt  sample.txt  scatter.txt
gglang/src/: app.rs  frame.rs  geometry.rs  lib.rs  main.rs  plot.rs  shader.wgsl  transform.rs
proj/: backlog.md  issue-ast-bridge.md  issue-axis-ticks.md  issue-csv-data-loading.md  issue-layout-tree.md  issue-plotdata-typing.md  poc-scatterplot.md  roadmap.md
proj/ideas/: ggplot2-deviations.md  (+2 more)
src/: aesthetic.rs  app.rs  ast.rs  column.rs  compile.rs  data.rs  error.rs  frame.rs  geom.rs  grammar.pest  layout.rs  lib.rs  main.rs  plot.rs  png.rs  scale.rs  shader.wgsl  shape.rs  svg.rs  theme.rs  transform.rs
tests/: svg_snapshots.rs
(+68 files in other folders)
