[package]
name = "ggc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
thiserror = "1"
resvg = "0.44"
bytemuck = { version = "1.24.0", features = ["derive"] }
env_logger = "0.11.8"
glyph_brush = "0.7.12"
log = "0.4.28"
pest = "2.8.3"
pest_derive = "2.8.3"
pollster = "0.4.0"
wgpu = "28.0.0"
wgpu_text = "28.0.0"
winit = { version = "0.30.12", features = ["android-native-activity"] }

[dev-dependencies]
insta = "1"
